src/main/java/yiplay/language/syntactic/y.output
   0  $accept : program $end

   1  program : statements

   2  statements :
   3             | statements statement

   4  statement : instructions
   5            | label

   6  label : "STRING" ':'

   7  instructions : "NOP"
   8               | "HALT"
   9               | "MOV" registro ',' registro
  10               | "MOV" registro ',' '[' registro ']'
  11               | "MOV" '[' registro ']' ',' registro
  12               | "MOVL" registro ',' numeros
  13               | "MOVH" registro ',' numeros
  14               | "PUSH" registro
  15               | "POP" registro
  16               | "ADD" registro ',' registro ',' registro
  17               | "SUB" registro ',' registro ',' registro
  18               | "OR" registro ',' registro ',' registro
  19               | "AND" registro ',' registro ',' registro
  20               | "XOR" registro ',' registro ',' registro
  21               | "CMP" registro ',' registro
  22               | "NOT" registro
  23               | "INC" registro
  24               | "DEC" registro
  25               | "NEG" registro
  26               | "CLI"
  27               | "STI"
  28               | "INT" numeros
  29               | "IRET"
  30               | "JMP" numeros
  31               | "JMP" "STRING"
  32               | "JMP" registro
  33               | "CALL" numeros
  34               | "CALL" "STRING"
  35               | "CALL" registro
  36               | "RET"
  37               | "BRC" numeros
  38               | "BRC" "STRING"
  39               | "BRNC" numeros
  40               | "BRNC" "STRING"
  41               | "BRO" numeros
  42               | "BRO" "STRING"
  43               | "BRNO" numeros
  44               | "BRNO" "STRING"
  45               | "BRZ" numeros
  46               | "BRZ" "STRING"
  47               | "BRNZ" numeros
  48               | "BRNZ" "STRING"
  49               | "BRS" numeros
  50               | "BRS" "STRING"
  51               | "BRNS" numeros
  52               | "BRNS" "STRING"

  53  registro : "REGISTRO"

  54  numeros : "NUMERO_ENTERO"
  55          | "NUMERO_HEXADECIMAL"
  56          | "NUMERO_BINARIO"

state 0
	$accept : . program $end  (0)
	statements : .  (2)

	.  reduce 2

	program  goto 1
	statements  goto 2


state 1
	$accept : program . $end  (0)

	$end  accept


state 2
	program : statements .  (1)
	statements : statements . statement  (3)

	"STRING"  shift 3
	"NOP"  shift 4
	"HALT"  shift 5
	"MOV"  shift 6
	"MOVL"  shift 7
	"MOVH"  shift 8
	"PUSH"  shift 9
	"POP"  shift 10
	"ADD"  shift 11
	"SUB"  shift 12
	"OR"  shift 13
	"AND"  shift 14
	"XOR"  shift 15
	"CMP"  shift 16
	"NOT"  shift 17
	"INC"  shift 18
	"DEC"  shift 19
	"NEG"  shift 20
	"CLI"  shift 21
	"STI"  shift 22
	"INT"  shift 23
	"IRET"  shift 24
	"JMP"  shift 25
	"CALL"  shift 26
	"RET"  shift 27
	"BRC"  shift 28
	"BRNC"  shift 29
	"BRO"  shift 30
	"BRNO"  shift 31
	"BRZ"  shift 32
	"BRNZ"  shift 33
	"BRS"  shift 34
	"BRNS"  shift 35
	$end  reduce 1

	statement  goto 36
	instructions  goto 37
	label  goto 38


state 3
	label : "STRING" . ':'  (6)

	':'  shift 39
	.  error


state 4
	instructions : "NOP" .  (7)

	.  reduce 7


state 5
	instructions : "HALT" .  (8)

	.  reduce 8


state 6
	instructions : "MOV" . registro ',' registro  (9)
	instructions : "MOV" . registro ',' '[' registro ']'  (10)
	instructions : "MOV" . '[' registro ']' ',' registro  (11)

	'['  shift 40
	"REGISTRO"  shift 41
	.  error

	registro  goto 42


state 7
	instructions : "MOVL" . registro ',' numeros  (12)

	"REGISTRO"  shift 41
	.  error

	registro  goto 43


state 8
	instructions : "MOVH" . registro ',' numeros  (13)

	"REGISTRO"  shift 41
	.  error

	registro  goto 44


state 9
	instructions : "PUSH" . registro  (14)

	"REGISTRO"  shift 41
	.  error

	registro  goto 45


state 10
	instructions : "POP" . registro  (15)

	"REGISTRO"  shift 41
	.  error

	registro  goto 46


state 11
	instructions : "ADD" . registro ',' registro ',' registro  (16)

	"REGISTRO"  shift 41
	.  error

	registro  goto 47


state 12
	instructions : "SUB" . registro ',' registro ',' registro  (17)

	"REGISTRO"  shift 41
	.  error

	registro  goto 48


state 13
	instructions : "OR" . registro ',' registro ',' registro  (18)

	"REGISTRO"  shift 41
	.  error

	registro  goto 49


state 14
	instructions : "AND" . registro ',' registro ',' registro  (19)

	"REGISTRO"  shift 41
	.  error

	registro  goto 50


state 15
	instructions : "XOR" . registro ',' registro ',' registro  (20)

	"REGISTRO"  shift 41
	.  error

	registro  goto 51


state 16
	instructions : "CMP" . registro ',' registro  (21)

	"REGISTRO"  shift 41
	.  error

	registro  goto 52


state 17
	instructions : "NOT" . registro  (22)

	"REGISTRO"  shift 41
	.  error

	registro  goto 53


state 18
	instructions : "INC" . registro  (23)

	"REGISTRO"  shift 41
	.  error

	registro  goto 54


state 19
	instructions : "DEC" . registro  (24)

	"REGISTRO"  shift 41
	.  error

	registro  goto 55


state 20
	instructions : "NEG" . registro  (25)

	"REGISTRO"  shift 41
	.  error

	registro  goto 56


state 21
	instructions : "CLI" .  (26)

	.  reduce 26


state 22
	instructions : "STI" .  (27)

	.  reduce 27


state 23
	instructions : "INT" . numeros  (28)

	"NUMERO_ENTERO"  shift 57
	"NUMERO_HEXADECIMAL"  shift 58
	"NUMERO_BINARIO"  shift 59
	.  error

	numeros  goto 60


state 24
	instructions : "IRET" .  (29)

	.  reduce 29


state 25
	instructions : "JMP" . numeros  (30)
	instructions : "JMP" . "STRING"  (31)
	instructions : "JMP" . registro  (32)

	"STRING"  shift 61
	"REGISTRO"  shift 41
	"NUMERO_ENTERO"  shift 57
	"NUMERO_HEXADECIMAL"  shift 58
	"NUMERO_BINARIO"  shift 59
	.  error

	registro  goto 62
	numeros  goto 63


state 26
	instructions : "CALL" . numeros  (33)
	instructions : "CALL" . "STRING"  (34)
	instructions : "CALL" . registro  (35)

	"STRING"  shift 64
	"REGISTRO"  shift 41
	"NUMERO_ENTERO"  shift 57
	"NUMERO_HEXADECIMAL"  shift 58
	"NUMERO_BINARIO"  shift 59
	.  error

	registro  goto 65
	numeros  goto 66


state 27
	instructions : "RET" .  (36)

	.  reduce 36


state 28
	instructions : "BRC" . numeros  (37)
	instructions : "BRC" . "STRING"  (38)

	"STRING"  shift 67
	"NUMERO_ENTERO"  shift 57
	"NUMERO_HEXADECIMAL"  shift 58
	"NUMERO_BINARIO"  shift 59
	.  error

	numeros  goto 68


state 29
	instructions : "BRNC" . numeros  (39)
	instructions : "BRNC" . "STRING"  (40)

	"STRING"  shift 69
	"NUMERO_ENTERO"  shift 57
	"NUMERO_HEXADECIMAL"  shift 58
	"NUMERO_BINARIO"  shift 59
	.  error

	numeros  goto 70


state 30
	instructions : "BRO" . numeros  (41)
	instructions : "BRO" . "STRING"  (42)

	"STRING"  shift 71
	"NUMERO_ENTERO"  shift 57
	"NUMERO_HEXADECIMAL"  shift 58
	"NUMERO_BINARIO"  shift 59
	.  error

	numeros  goto 72


state 31
	instructions : "BRNO" . numeros  (43)
	instructions : "BRNO" . "STRING"  (44)

	"STRING"  shift 73
	"NUMERO_ENTERO"  shift 57
	"NUMERO_HEXADECIMAL"  shift 58
	"NUMERO_BINARIO"  shift 59
	.  error

	numeros  goto 74


state 32
	instructions : "BRZ" . numeros  (45)
	instructions : "BRZ" . "STRING"  (46)

	"STRING"  shift 75
	"NUMERO_ENTERO"  shift 57
	"NUMERO_HEXADECIMAL"  shift 58
	"NUMERO_BINARIO"  shift 59
	.  error

	numeros  goto 76


state 33
	instructions : "BRNZ" . numeros  (47)
	instructions : "BRNZ" . "STRING"  (48)

	"STRING"  shift 77
	"NUMERO_ENTERO"  shift 57
	"NUMERO_HEXADECIMAL"  shift 58
	"NUMERO_BINARIO"  shift 59
	.  error

	numeros  goto 78


state 34
	instructions : "BRS" . numeros  (49)
	instructions : "BRS" . "STRING"  (50)

	"STRING"  shift 79
	"NUMERO_ENTERO"  shift 57
	"NUMERO_HEXADECIMAL"  shift 58
	"NUMERO_BINARIO"  shift 59
	.  error

	numeros  goto 80


state 35
	instructions : "BRNS" . numeros  (51)
	instructions : "BRNS" . "STRING"  (52)

	"STRING"  shift 81
	"NUMERO_ENTERO"  shift 57
	"NUMERO_HEXADECIMAL"  shift 58
	"NUMERO_BINARIO"  shift 59
	.  error

	numeros  goto 82


state 36
	statements : statements statement .  (3)

	.  reduce 3


state 37
	statement : instructions .  (4)

	.  reduce 4


state 38
	statement : label .  (5)

	.  reduce 5


state 39
	label : "STRING" ':' .  (6)

	.  reduce 6


state 40
	instructions : "MOV" '[' . registro ']' ',' registro  (11)

	"REGISTRO"  shift 41
	.  error

	registro  goto 83


state 41
	registro : "REGISTRO" .  (53)

	.  reduce 53


state 42
	instructions : "MOV" registro . ',' registro  (9)
	instructions : "MOV" registro . ',' '[' registro ']'  (10)

	','  shift 84
	.  error


state 43
	instructions : "MOVL" registro . ',' numeros  (12)

	','  shift 85
	.  error


state 44
	instructions : "MOVH" registro . ',' numeros  (13)

	','  shift 86
	.  error


state 45
	instructions : "PUSH" registro .  (14)

	.  reduce 14


state 46
	instructions : "POP" registro .  (15)

	.  reduce 15


state 47
	instructions : "ADD" registro . ',' registro ',' registro  (16)

	','  shift 87
	.  error


state 48
	instructions : "SUB" registro . ',' registro ',' registro  (17)

	','  shift 88
	.  error


state 49
	instructions : "OR" registro . ',' registro ',' registro  (18)

	','  shift 89
	.  error


state 50
	instructions : "AND" registro . ',' registro ',' registro  (19)

	','  shift 90
	.  error


state 51
	instructions : "XOR" registro . ',' registro ',' registro  (20)

	','  shift 91
	.  error


state 52
	instructions : "CMP" registro . ',' registro  (21)

	','  shift 92
	.  error


state 53
	instructions : "NOT" registro .  (22)

	.  reduce 22


state 54
	instructions : "INC" registro .  (23)

	.  reduce 23


state 55
	instructions : "DEC" registro .  (24)

	.  reduce 24


state 56
	instructions : "NEG" registro .  (25)

	.  reduce 25


state 57
	numeros : "NUMERO_ENTERO" .  (54)

	.  reduce 54


state 58
	numeros : "NUMERO_HEXADECIMAL" .  (55)

	.  reduce 55


state 59
	numeros : "NUMERO_BINARIO" .  (56)

	.  reduce 56


state 60
	instructions : "INT" numeros .  (28)

	.  reduce 28


state 61
	instructions : "JMP" "STRING" .  (31)

	.  reduce 31


state 62
	instructions : "JMP" registro .  (32)

	.  reduce 32


state 63
	instructions : "JMP" numeros .  (30)

	.  reduce 30


state 64
	instructions : "CALL" "STRING" .  (34)

	.  reduce 34


state 65
	instructions : "CALL" registro .  (35)

	.  reduce 35


state 66
	instructions : "CALL" numeros .  (33)

	.  reduce 33


state 67
	instructions : "BRC" "STRING" .  (38)

	.  reduce 38


state 68
	instructions : "BRC" numeros .  (37)

	.  reduce 37


state 69
	instructions : "BRNC" "STRING" .  (40)

	.  reduce 40


state 70
	instructions : "BRNC" numeros .  (39)

	.  reduce 39


state 71
	instructions : "BRO" "STRING" .  (42)

	.  reduce 42


state 72
	instructions : "BRO" numeros .  (41)

	.  reduce 41


state 73
	instructions : "BRNO" "STRING" .  (44)

	.  reduce 44


state 74
	instructions : "BRNO" numeros .  (43)

	.  reduce 43


state 75
	instructions : "BRZ" "STRING" .  (46)

	.  reduce 46


state 76
	instructions : "BRZ" numeros .  (45)

	.  reduce 45


state 77
	instructions : "BRNZ" "STRING" .  (48)

	.  reduce 48


state 78
	instructions : "BRNZ" numeros .  (47)

	.  reduce 47


state 79
	instructions : "BRS" "STRING" .  (50)

	.  reduce 50


state 80
	instructions : "BRS" numeros .  (49)

	.  reduce 49


state 81
	instructions : "BRNS" "STRING" .  (52)

	.  reduce 52


state 82
	instructions : "BRNS" numeros .  (51)

	.  reduce 51


state 83
	instructions : "MOV" '[' registro . ']' ',' registro  (11)

	']'  shift 93
	.  error


state 84
	instructions : "MOV" registro ',' . registro  (9)
	instructions : "MOV" registro ',' . '[' registro ']'  (10)

	'['  shift 94
	"REGISTRO"  shift 41
	.  error

	registro  goto 95


state 85
	instructions : "MOVL" registro ',' . numeros  (12)

	"NUMERO_ENTERO"  shift 57
	"NUMERO_HEXADECIMAL"  shift 58
	"NUMERO_BINARIO"  shift 59
	.  error

	numeros  goto 96


state 86
	instructions : "MOVH" registro ',' . numeros  (13)

	"NUMERO_ENTERO"  shift 57
	"NUMERO_HEXADECIMAL"  shift 58
	"NUMERO_BINARIO"  shift 59
	.  error

	numeros  goto 97


state 87
	instructions : "ADD" registro ',' . registro ',' registro  (16)

	"REGISTRO"  shift 41
	.  error

	registro  goto 98


state 88
	instructions : "SUB" registro ',' . registro ',' registro  (17)

	"REGISTRO"  shift 41
	.  error

	registro  goto 99


state 89
	instructions : "OR" registro ',' . registro ',' registro  (18)

	"REGISTRO"  shift 41
	.  error

	registro  goto 100


state 90
	instructions : "AND" registro ',' . registro ',' registro  (19)

	"REGISTRO"  shift 41
	.  error

	registro  goto 101


state 91
	instructions : "XOR" registro ',' . registro ',' registro  (20)

	"REGISTRO"  shift 41
	.  error

	registro  goto 102


state 92
	instructions : "CMP" registro ',' . registro  (21)

	"REGISTRO"  shift 41
	.  error

	registro  goto 103


state 93
	instructions : "MOV" '[' registro ']' . ',' registro  (11)

	','  shift 104
	.  error


state 94
	instructions : "MOV" registro ',' '[' . registro ']'  (10)

	"REGISTRO"  shift 41
	.  error

	registro  goto 105


state 95
	instructions : "MOV" registro ',' registro .  (9)

	.  reduce 9


state 96
	instructions : "MOVL" registro ',' numeros .  (12)

	.  reduce 12


state 97
	instructions : "MOVH" registro ',' numeros .  (13)

	.  reduce 13


state 98
	instructions : "ADD" registro ',' registro . ',' registro  (16)

	','  shift 106
	.  error


state 99
	instructions : "SUB" registro ',' registro . ',' registro  (17)

	','  shift 107
	.  error


state 100
	instructions : "OR" registro ',' registro . ',' registro  (18)

	','  shift 108
	.  error


state 101
	instructions : "AND" registro ',' registro . ',' registro  (19)

	','  shift 109
	.  error


state 102
	instructions : "XOR" registro ',' registro . ',' registro  (20)

	','  shift 110
	.  error


state 103
	instructions : "CMP" registro ',' registro .  (21)

	.  reduce 21


state 104
	instructions : "MOV" '[' registro ']' ',' . registro  (11)

	"REGISTRO"  shift 41
	.  error

	registro  goto 111


state 105
	instructions : "MOV" registro ',' '[' registro . ']'  (10)

	']'  shift 112
	.  error


state 106
	instructions : "ADD" registro ',' registro ',' . registro  (16)

	"REGISTRO"  shift 41
	.  error

	registro  goto 113


state 107
	instructions : "SUB" registro ',' registro ',' . registro  (17)

	"REGISTRO"  shift 41
	.  error

	registro  goto 114


state 108
	instructions : "OR" registro ',' registro ',' . registro  (18)

	"REGISTRO"  shift 41
	.  error

	registro  goto 115


state 109
	instructions : "AND" registro ',' registro ',' . registro  (19)

	"REGISTRO"  shift 41
	.  error

	registro  goto 116


state 110
	instructions : "XOR" registro ',' registro ',' . registro  (20)

	"REGISTRO"  shift 41
	.  error

	registro  goto 117


state 111
	instructions : "MOV" '[' registro ']' ',' registro .  (11)

	.  reduce 11


state 112
	instructions : "MOV" registro ',' '[' registro ']' .  (10)

	.  reduce 10


state 113
	instructions : "ADD" registro ',' registro ',' registro .  (16)

	.  reduce 16


state 114
	instructions : "SUB" registro ',' registro ',' registro .  (17)

	.  reduce 17


state 115
	instructions : "OR" registro ',' registro ',' registro .  (18)

	.  reduce 18


state 116
	instructions : "AND" registro ',' registro ',' registro .  (19)

	.  reduce 19


state 117
	instructions : "XOR" registro ',' registro ',' registro .  (20)

	.  reduce 20


43 terminals, 8 nonterminals
57 grammar rules, 118 states
